fix gaps between portraits and fix scream volume

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,17 +2,17 @@
 @tailwind components;
 @tailwind utilities;
 
-/*:root {*/
-/*    --background: #ffffff;*/
-/*    --foreground: #171717;*/
-/*}*/
+:root {
+    --background: #ffffff;
+    --foreground: #171717;
+}
 
-/*@media (prefers-color-scheme: dark) {*/
-/*    :root {*/
-/*        --background: #0a0a0a;*/
-/*        --foreground: #ededed;*/
-/*    }*/
-/*}*/
+@media (prefers-color-scheme: dark) {
+    :root {
+        --background: #0a0a0a;
+        --foreground: #ededed;
+    }
+}
 
 body {
     color: var(--foreground);
@@ -51,33 +51,33 @@ body {
 
 .row-1 {
     top: 5%;
-    animation: moveLeft 30s linear infinite;
+    animation: moveLeft 60s linear infinite;
 }
 
 .row-2 {
     top: 40%;
-    animation: moveRight 15s linear infinite;
+    animation: moveRight 80s linear infinite;
 }
 
 .row-3 {
     top: 75%;
-    animation: moveLeft 20s linear infinite;
+    animation: moveLeft 100s linear infinite;
 }
 
 @keyframes moveLeft {
     0% {
-        transform: translateX(100%);
+        transform: translateX(1800%);
     }
     100% {
-        transform: translateX(-100%);
+        transform: translateX(-1800%);
     }
 }
 
 @keyframes moveRight {
     0% {
-        transform: translateX(-100%);
+        transform: translateX(-1600%);
     }
     100% {
-        transform: translateX(100%);
+        transform: translateX(1800%);
     }
 }
